--- a/package.json
+++ b/package.json
@@ -5,25 +5,33 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DEBUG=app nodemon app.js",
+    "start": "DEBUG=app,app:* nodemon app.js",
     "lint": "eslint app.js"
   },
   "author": "Hassan K Salim",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bootstrap": "3.3.7",
     "chalk": "2.4.1",
+    "cookie-parser": "^1.4.3",
     "debug": "3.1.0",
     "ejs": "2.5.9",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "jquery": "3.3.1",
+    "mongodb": "^3.1.0-beta4",
     "morgan": "1.9.0",
+    "mysql": "^2.15.0",
+    "package.json": "^2.0.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.3"
   },
   "devDependencies": {
-    "eslint": "4.19.1",
-    "eslint-config-airbnb-base": "12.1.0",
-    "eslint-plugin-import": "2.11.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
     "nodemon": "1.17.3"
   },
   "nodemonConfig": {
